# rsomics-anderson-darling

./: Cargo.toml  README.md
benches/: ad.rs
examples/: compute_only.rs
src/: cli.rs  dist.rs  ksample.rs  lib.rs  ndtr.rs  onesample.rs
tests/: compat.rs
tests/golden/: expected.json  expon50.tsv  expon_below.tsv  expon_below2.tsv  gumbel_l35.tsv  gumbel_r35.tsv  k2_cap_s1.tsv  k2_cap_s2.tsv  k2_floor_s1.tsv  k2_floor_s2.tsv  k2_ties_s1.tsv  k2_ties_s2.tsv  k3_norm_s1.tsv  k3_norm_s2.tsv  k3_norm_s3.tsv  k3_right_s1.tsv  k3_right_s2.tsv  k3_right_s3.tsv  logistic45.tsv  norm40.tsv  skewed_vs_norm.tsv
