[package]
name = "rsomics-anderson-darling"
version = "0.1.2"
description = "Anderson-Darling goodness-of-fit (one-sample + k-sample) — value-exact to scipy.stats.anderson / anderson_ksamp"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-anderson-darling"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["statistics", "anderson-darling", "scipy", "goodness-of-fit", "bioinformatics"]
readme = "README.md"

[[bin]]
name = "rsomics-anderson-darling"
path = "src/main.rs"

[lib]
name = "rsomics_anderson_darling"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6", features = ["rayon"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1"

[[bench]]
name = "ad"
harness = false
